<resources>

    <!--    Header Text = Text that appears at the top of page to instruct users on what to do next   -->
    <!--    Helper Text = Text that appears throughout page to provide users with information    -->
    <!--    Edit Text Hint = Text that appears in EditText boxes to inform users on what to input    -->
    <!--    Error Text = Text that appears when an error has occurred    -->
    <!--    Button Text = Text  that appears on the actual buttons    -->

    <!--    Splash Screen Miscellaneous Portion    -->
    <string name="appName">QuizzAssist</string>
    <string name="appSlogan">Exams Made Easy</string>
    <string name="getStartedButtonText">Get Started</string>

    <!--    User Sign-up & Login information Portion    -->
    <string name="signUpHeaderText">Create An Account</string>
    <string name="signUpButtonText">Sign Up</string>
    <string name="logInHeaderText">Log In To Your Account></string>
    <string name="loginButtonText">Sign In</string>
    <string name="logOutButtonText">Log Out</string>

    <string name="userNameEditTextHint">Username (required)</string>
    <string name="userFirstNameEditTextHint">First Name (required)</string>
    <string name="userMiddleNameEditTextHint">Middle Name (optional)</string>
    <string name="userLastNameEditTextHint">Last Name (required)</string>
    <string name="userStudentNumberEditTextHint">Student Number (optional)</string>

    <string name="userEmailEditTextHint">Email (required)</string>
    <string name="userPasswordEditTextHint">Password (required)</string>

    <!--    User Option Portion    -->
    <string name="userOption">Create or Join a class</string>
    <string name="userOption_CreateCourse">Create a Course</string>
    <string name="userOption_joinCourse">Join a Course</string>

    <!--    Course Creation Portion    -->
    <string name="createCourseButtonText">Create Course</string>
    <string name="createClassNameEditTextHint">Enter Course Name</string>
    <string name="wordPrivate">Private</string>
    <string name="wordPublic">Public</string>
    <string name="addCourseErrorText">Error occurred in adding class</string>

    <!--    Course Joining Portion    -->
    <string name="joinCourseButtonText">Join Course</string>
    <string name="inviteCodeHeaderText">Enter the course invite code below</string>
    <string name="inviteCodeEditTextHint">Enter invite code</string>

    <!--    Post-Course Create/Join Portion    -->
    <string name="createCourseSuccessText">Course Successfully Created!</string>
    <string name="inviteCodeHelperText">Your unique invite code is:</string>
    <string name="joinCourseSuccessText">You have successfully joined the course!</string>
    <string name="continueToNextButtonText">Continue</string>

    <!--    Test Strings Portion    -->
    <string name="test_homePageButtonText">Home Page</string>
    <string name="test_addCourseButtonText">Add Course</string>
    <string name="test_deleteCourseButtonText">Delete Course</string>
    <string name="test_logOutButtonText">Log Out</string>
    <string name="test_inviteCodeDefault">gfu40giXz</string>
    <string name="test_classNameDefault">Test Class</string>

    <string name="test_userName" translatable="false">testUserName123</string>
    <string name="test_userFullName" translatable="false">Brandon Middlename Joe</string>
    <string name="test_userFirstName" translatable="false">Brandon</string>
    <string name="test_userMiddleName" translatable="false">NoMiddleName</string>
    <string name="test_userLastName" translatable="false">Yip</string>
    <string name="test_userEmail" translatable="false">testEmail@gmail.com</string>
    <string name="test_userStudentNumber" translatable="false">301219683</string>

    <!--    Home Fragment strings   -->
    <string name="homeFtCourseTV">My Courses</string>
    <string name="courseCardText">Course Name</string>
    <string name="joinedCourses">Joined Courses</string>
    <string name="createdCourses">Created Courses</string>

    <!--    Settings Fragment Strings Portion    -->
    <string name="editUserInfoButtonText">Edit Profile</string>
    <string name="settings_userNameHelperText">Username</string>

    <!--    Edit User Profile Settings Portion    -->
    <string name="settings_profileSettingsHeaderText">Profile Settings</string>
    <string name="settings_saveProfileChangesButtonText">Save Changes</string>
    <string name="classCreated">Class created</string>
    <string name="enrollClass">Enrolled Class</string>

    <string name="settings_userFirstNameHelperText">First Name</string>
    <string name="settings_userMiddleNameHelperText">Middle Name</string>
    <string name="settings_userLastNameHelperText">Last Name</string>
    <string name="settings_userEmailHelperText">Email</string>
    <string name="settings_userStudentNumberNameHelperText">Student Number</string>

    <string name="createQuestionTitle">Create your question Below</string>
    <string name="createQuestionHint">Input your Question text Here</string>
    <string name="createQuestion">Create Question</string>
    <string name="classLinkHint">Enter the Course Name</string>

    <string name="ForgotPassword">Forgot Password?</string>
    <string name="ForgotPasswordHeader">Please Input your email for recovery</string>
    <string name="forgotPasswordHint">Input Email</string>
    <string name="forgotPasswordButton">Send Mail</string>
    <string name="forgotPasswordDialogTitle">Password Reset</string>
    <string name="alertDialogMessage">Verification Email is sent, Check ur mailbox to reset your password!</string>

    <string name="eventCreationTitle">Create your Event here</string>
    <string name="startDate">Event start Date</string>
    <string name="startTime">Event start Time</string>
    <string name="endDate">Event end Date</string>
    <string name="endTime">Event end Time</string>
    <string name="questionNumber">Number of questions in Event</string>
    <string name="submitButton">Save Event</string>

    <string name="eventTitle">Enter event title here</string>
    <string name="questionTitle">Enter Question Title here</string>

    <string name="eventQuestion"># Questions</string>

    <string name="courseInviteCode">Invite Code</string>
    <string name="createCourseTitle">Create Your Course</string>

    <!-- WhiteBoard Activity Portion -->
    <string name="confirmClearingWhiteboard">CONFIRM CLEARING WHITEBOARD</string>
    <string name="exampleQuestion">EXAMPLE QUESTION GOING BEYOND THE POWER 9000 TO CHECK</string>
    <string name="confirmSubmission">DO YOU WANT TO SUBMIT YOUR PHOTO?</string>

    <!--    Undetermined Portion    -->
    <string name="searchTitle">Search Course</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- white board-->
    <string name="whiteboardPen">Pen</string>
    <string name="whiteboardEraser">Eraser</string>
    <string name="whiteboardUndo">Undo</string>
    <string name="whiteboardclear">Clear</string>
    <string name="whiteboardQuestion">question</string>
    <string name="whiteboardSubmit">Submit</string>
    <string name="whiteboardBack">back</string>
    <string name="example_question_going_beyond_the_power_9000_to_check">EXAMPLE QUESTION GOING BEYOND THE POWER 9000 TO CHECK</string>
    <string name="confirm_clearing_whiteboard">CONFIRM CLEARING WHITEBOARD</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="number_of_events_in_the_classroom">Number of Events in the ClassRoom</string>
    <string name="course_1">Course 1</string>
    <string name="event_title">Event title</string>

    <string name="viewAnswers">View Answers</string>
    <string name="menuHome">Home</string>
    <string name="menuAdd">ADD</string>
    <string name="menuSettings">Settings</string>
    <string name="studentName">Student Name</string>
    <string name="event_title_answers">Event Title Answers</string>
    <string name="students">Students</string>
    <string name="add_event">Add Event</string>
    <string name="course_name">Course Name</string>
    <string name="number_of_events"># of Events</string>
    <string name="please_select_app_language">selectAppLanguage</string>
    <string name="default_language">English</string>
    <string name="chinese">Chinese</string>
    <string name="switch_language">switch language</string>

    <string name="settings_userAvatarHelperText"><b><u>Change Profile Photo</u></b></string>
    <string name="settings_userAvatarRemoveCurrentPhoto">Remove Current Photo</string>
    <string name="settings_userAvatarTakePhoto">Take Photo</string>
    <string name="settings_userAvatarChooseFromLibrary">Choose From Library</string>
    <string name="settings_userAvatarCancel">Cancel</string>

</resources>
