<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_editUserSettingsPage"
    android:background="@color/appBackground"
    style="@style/MatchParentHeightAndWidth"
    tools:context=".EditProfileSettings">

    <RelativeLayout
        android:id="@+id/rv_userProfileEdit"
        style="@style/MatchParentHeightAndWidth"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/iv_backToUserProfile"
            style="@style/BackViewStandard" />

        <TextView
            android:id="@+id/profileSettingsHeaderText"
            style="@style/GenericText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:textSize="30dp"
            android:text="@string/settings_profileSettingsHeaderText"/>

        <LinearLayout
            android:id="@+id/linLayout_userInformationHeaderText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="250dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_userNameHelperText"
                style="@style/GenericText"
                android:text="@string/settings_userNameHelperText"
                android:layout_marginBottom="25dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_userFirstNameHelperText"
                style="@style/GenericText"
                android:text="@string/settings_userFirstNameHelperText"
                android:layout_marginBottom="25dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_userMiddleNameHelperText"
                style="@style/GenericText"
                android:text="@string/settings_userMiddleNameHelperText"
                android:layout_marginBottom="27dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_userLastNameHelperText"
                style="@style/GenericText"
                android:text="@string/settings_userLastNameHelperText"
                android:layout_marginBottom="29dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_userEmailNameHelperText"
                style="@style/GenericText"
                android:text="@string/settings_userEmailHelperText"
                android:layout_marginBottom="15dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_userStudentNumberHelperText"
                style="@style/GenericText"
                android:text="@string/settings_userStudentNumberNameHelperText"
                android:layout_marginBottom="25dp"
                android:textSize="18sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rv_userCurrentInformation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="120dp"
            android:layout_marginTop="180dp">

            <LinearLayout
                android:id="@+id/linLayout_userCurrentInformation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_et_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:right="120dp"
                    android:text="@string/test_userName"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_et_userFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_userFirstName"
                    android:layout_marginBottom="3dp"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_et_userMiddleName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:right="120dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/test_userMiddleName"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_et_userLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:right="120dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/test_userLastName"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_et_userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:right="120dp"
                    android:layout_marginBottom="3dp"
                    android:inputType="textEmailAddress"
                    android:text="@string/test_userEmail"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_et_userStudentNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:right="120dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/test_userStudentNumber"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/bt_saveUserProfileChanges"
            style="@style/Buttons"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="600dp"
            android:text="@string/settings_saveProfileChangesButtonText"/>

    </RelativeLayout>

</RelativeLayout>