<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUpPage"
    android:background="@color/appBackground">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpHeaderText"
            android:gravity="center"
            android:id="@+id/signupTitle"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textSize="40sp"/>

        <EditText
            style="@style/EditTextStandard"
            android:hint="@string/userNameEditTextHint"
            android:layout_below="@+id/signupTitle"
            android:id="@+id/et_name" />

        <EditText
            style="@style/EditTextStandard"
            android:layout_below="@id/et_name"
            android:hint="@string/userEmailEditTextHint"
            android:id="@+id/et_email"
            android:layout_centerHorizontal="true"/>

        <EditText
            style="@style/EditTextStandard"
            android:layout_below="@id/et_email"
            android:hint="@string/userPasswordEditTextHint"
            android:id="@+id/et_pass"
            android:inputType="textPassword" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpButtonText"
            android:layout_below="@id/et_pass"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:id="@+id/bt_signupPage"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_below="@id/backToLogin"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:visibility="invisible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_signupPage"
            android:id="@+id/backToLogin"
            android:layout_margin="5dp"
            android:layout_centerHorizontal="true"
            android:text="@string/loginButtonText"/>


    </RelativeLayout>

</RelativeLayout>