<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsPage"
    style="@style/MatchParentHeightAndWidth"
    android:background="@color/appBackground"
    tools:context=".SettingsFragment">

    <RelativeLayout
        android:id="@+id/rv_userSettings"
        style="@style/MatchParentHeightAndWidth">

        <ImageView
            android:id="@+id/iv_userAvatar"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/profile_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"/>

        <ImageView
            android:id="@+id/iv_changeUserAvatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_bg"
            android:layout_below="@id/iv_userAvatar"
            android:src="@drawable/ic_camera" />

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/test_userFullName"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/iv_changeUserAvatar"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tv_userFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_centerInParent="true"
            android:text="@string/test_userName"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_below="@id/tv_userName"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tv_userEmail"
            android:layout_below="@id/tv_userFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/test_userEmail"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tv_userStudentNumber"
            android:layout_below="@id/tv_userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/bt_editProfile"
            style="@style/Buttons"
            android:layout_below="@id/tv_userStudentNumber"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/editUserInfoButtonText"
            />

        <Button
            android:id="@+id/bt_logoutButton"
            style="@style/Buttons"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/bt_editProfile"
            android:text="@string/logOutButtonText" />

    </RelativeLayout>

</FrameLayout>