<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EventDetailsFragment"
    android:background="@color/appBackground">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_viewAnswers"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:text="@string/viewAnswers"
            android:visibility="invisible">
        </Button>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.CardView"
            android:padding="30dp"
            app:cardElevation="10dp"
            android:id="@+id/eventTitleHeader">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eventTitle"
                    android:textSize="25sp"
                    android:id="@+id/tv_eventTitleDetails"
                    android:layout_alignParentLeft="true"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eventQuestion"
                    android:layout_alignParentRight="true"
                    android:id="@+id/tv_eventQuestion"
                    android:textSize="25sp"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/eventTitleHeader"
            android:layout_margin="5dp"
            android:id="@+id/questionListView"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:id="@+id/floatingActionQuestion"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:src="@drawable/icon_add"/>

    </RelativeLayout>


</FrameLayout>